--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
       "streamSettings": {
         "network": "ws",
         "wsSettings": {
-        "path": "/xiaonuo"
+        "path": "/xianuo"
         }
       }
     }
